add current system models and controllers
